fix: use contrast color for unstyled code.

--- a/source/components/code/style.scss
+++ b/source/components/code/style.scss
@@ -15,6 +15,7 @@ $_: "c-code";
     pre[class*="language-"],
     code[class*="language-"] {
         font-family: tokens.get($_, "font-family-code");
+        color: tokens.get($_, "color--surface-contrast");
     }
 
     .code-toolbar {
